--- a/env.example
+++ b/env.example
@@ -8,6 +8,10 @@ VERCEL_TOKEN=your_vercel_token_here
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_KEY=your_supabase_anon_key_here
 
+# NeuralSeek Configuration
+NEURALSEEK_API_KEY=452d320e-5d4fac0e-b0382a8f-f276aebb
+NEURALSEEK_INSTANCE=Liam-demo
+
 # Next.js Configuration
 NEXTAUTH_SECRET=your_nextauth_secret_here
 NEXTAUTH_URL=http://localhost:3000 
