--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.0.0",
+    "axios": "^1.10.0",
+    "fs-extra": "^11.0.0",
     "next": "^14.0.0",
+    "openai": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "openai": "^4.0.0",
-    "fs-extra": "^11.0.0",
-    "@supabase/supabase-js": "^2.0.0"
+    "lucide-react": "^0.263.1",
+    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/fs-extra": "^11.0.0",
-    "typescript": "^5.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "typescript": "^5.0.0"
   }
-} 
+}
